@@ -1,5 +1,6 @@
 DIST eiskaltdc-1.0.2.tar.bz2 1938429 RMD160 ed1be884a081e3ec1712c52d5c9c5a0bf3a9c942 SHA1 fb53077d82883e48705915333e3a81b2357b172f SHA256 50e980aa655db5afa7465bb72e0f4245a728aa62a4f764fdd5c2c2692130c8ed
 EBUILD eiskaltdc-1.0.2.ebuild 863 RMD160 54b38dd50269345ed0c4f01d168ae16d5f68d6aa SHA1 badcee680cb4c0286c7ef682c53770f7c0a83b1f SHA256 d60525d697c4590900c896f451f6ba46cd782a7a7415d99d4d64bd8d15ca419e
+EBUILD eiskaltdc-9999-r1.ebuild 837 RMD160 db9b8d94b836137ec73cda31e4815b6116bd4415 SHA1 e4d73c7c91108f054d642ad263a7bb21177342cd SHA256 4dc0363c8eab1f2a7109718f89009c6b19cc80c2d7a40f2acd2f2f5f27403e6c
 EBUILD eiskaltdc-9999.ebuild 754 RMD160 5831a71269fbf5916d5b9c0bf3aac59789c3f991 SHA1 8dcc3855cedee2727400645ed93f3a027a4f842a SHA256 b309f8fe540be8951705a22a8e810c97767faf3113313daf46d2555a0d0edbbe
 MISC ChangeLog 616 RMD160 64a460a32022a057b6d54c5f921f64d4fa1150e1 SHA1 fc24e1e1c09ec5e05b75d4f48de23e8921aea324 SHA256 01eb9818b69a833fc54841f7eee22979843e77e057cdb3bd05ad37d485e0f7aa
 MISC metadata.xml 247 RMD160 d9dbc213793413ee971eb2153aeb87a23ab9ee5b SHA1 20912308b3b6a48acf1ebc34de61a9ff1caba154 SHA256 dee352934f95e5b33d8cec04b9d1fa5e321fa2f82bd6792fd0015db46b2417d6
